--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "@nestjs/microservices": "^8.2.6",
     "@nestjs/mongoose": "^9.0.2",
     "@nestjs/platform-express": "^8.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "env-cmd": "^10.1.0",
     "mongoose": "^6.1.9",
     "reflect-metadata": "^0.1.13",
